stratify jvm flags